@@ -4,13 +4,16 @@ requires = [
     "Cython>=0.28",
     "packaging",
     # lowest NumPy we can use for a given Python,
-    # except for more exotic platforms (linux/Mac ARM flavors)
-    "numpy==1.19; python_version=='3.8' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_machine!='aarch64'",
-    "numpy==1.19.3; python_version=='3.9' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_machine!='aarch64'",
-    "numpy==1.21.4; python_version=='3.10' and platform_python_implementation != 'PyPy'",
+    # except for more exotic platform (Mac Arm flavors)
+    # aarch64, AIX, s390x all support < 1.20 so we can safely pin to this
+    "numpy==1.20.0; python_version=='3.8' and (platform_machine!='arm64' or platform_system!='Darwin')",
+    "numpy==1.20.0; python_version=='3.9' and (platform_machine!='arm64' or platform_system!='Darwin')",
+    # arm64 on darwin for py3.8+ requires numpy >=1.21.0
+    "numpy==1.21.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'",
+    "numpy==1.21.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'",
+    # As per https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
+    # safest to build at 1.21.6 for all platforms
+    "numpy==1.21.6; python_version=='3.10' and platform_python_implementation != 'PyPy'",
     "setuptools",
     "wheel",
-    # arm64 on Darwin supports Python 3.8 and above and requires numpy>=1.20.0
-    "numpy==1.20.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'",
-    "numpy==1.20.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'",
 ]
