@@ -190,7 +190,7 @@ def get_numpy_include():
         import numpy as np
     except ImportError:
         print('*** package "numpy" not found ***')
-        print('MDAnalysis requires a version of NumPy (>=1.19.0), even for setup.')
+        print('MDAnalysis requires a version of NumPy (>=1.20.0), even for setup.')
         print('Please get it from http://numpy.scipy.org/ or install it through '
               'your package manager.')
         sys.exit(-1)
@@ -597,7 +597,7 @@ if __name__ == '__main__':
     exts, cythonfiles = extensions(config)
 
     install_requires = [
-          'numpy>=1.19.0',
+          'numpy>=1.20.0',
           'biopython>=1.71',
           'networkx>=2.0',
           'GridDataFormats>=0.4.0',
@@ -646,7 +646,7 @@ if __name__ == '__main__':
           # all standard requirements are available through PyPi and
           # typically can be installed without difficulties through setuptools
           setup_requires=[
-              'numpy>=1.19.0',
+              'numpy>=1.20.0',
               'packaging',
           ],
           install_requires=install_requires,
